<resources>
    <string name="app_name">MindSettle</string>
    <string name="name">MindSettle</string>
    <string name="signIn">Sign In</string>
    <string name="logout">Log Out</string>
    <string name="createAcc">Create Account</string>
    <string name="email">Email* </string>
    <string name="password">Password* </string>
    <string name="confirmPass">Confirm Password* </string>
    <string name="username">Username* </string>
    <string name="birthYear">Birth Year* </string>
    <string name="country">Country </string>
    <string name="province">Province/State </string>
    <string name="signUp">Sign Up</string>
    <string name="testSession">Test Session</string>
    <string name="url_server">https://loxodromic-tactic.000webhostapp.com/api/</string>
    <string name="url_user_read">user/read.php</string>
    <string name="url_user_create">user/create.php</string>
    <string name="url_user_create_goal">user/create_goal.php</string>
    <string name="url_user_create_mood">user/create_mood.php</string>
    <string name="url_user_create_gratitude">user/create_gratitude.php</string>
    <string name="url_user_delete">user/delete.php</string>
    <string name="url_user_delete_goal">user/delete_goal.php</string>
    <string name="url_user_delete_gratitude">user/delete_gratitude.php</string>
    <string name="url_user_delete_mood">user/delete_mood.php</string>
    <string name="url_user_read_one">user/read_one.php</string>
    <string name="url_user_read_one_sign">user/read_one_sign.php</string>
    <string name="url_user_search_goal">user/search_goal.php</string>
    <string name="url_user_search_mood">user/search_mood.php</string>
    <string name="url_user_search_gratitude">user/search_gratitude.php</string>
    <string name="url_user_update">user/update.php</string>
    <string name="url_user_update_goal">user/update_goal.php</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!--ys-->
    <string name="learn_more">Learn More</string>
    <string name="submit">Submit</string>

    <!--jh-->

    <string name="Upload">Upload</string>
    <string name="awful">AWFUL</string>
    <string name="bad">BAD</string>
    <string name="ok">OK</string>
    <string name="good">GOOD</string>
    <string name="great">GREAT</string>
    <string name="feelawful">I am feeling AWFUL</string>
    <string name="feelbad">I am feeling BAD</string>
    <string name="feelok">I am feeling OK</string>
    <string name="feelgood">I am feeling GOOD</string>
    <string name="feelgreat">I am feeling GREAT</string>
    <string name="how">How are you today?</string>
    <string name="comment">Comments</string>
    <string name="Enter">Enter comments about your mood.</string>
    <string name="View">View Check-In Summary</string>
    <string name="take">Take A Breath</string>
    <string name="shift">Shift Your Thinking</string>
    <string name="gratitude">Gratitude</string>
    <string name="takeasmallstep">Take A Small Step</string>
    <string name="gethelp">Get Help</string>
    <string name="Reachafriend">Reach a friend</string>
    <string name="Goforawalk">Go for a walk</string>
    <string name="Haveabite">Have a bite</string>
    <string name="Goforashort">Go for a short walk around the block</string>
    <string name="Whenyouexercise">When your exercise, it helps to take your mind off things.</string>
    <string name="Close">Close</string>
    <string name="Reachout">Reach out to a friend</string>
    <string name="Feelingsupported">Feeling supported by others can help you ride out through feelings.</string>
    <string name="Havea">Have a quick bite to eat</string>
    <string name="Beinghungry">Being hungry can affect your mood.</string>
    <string name="title_activity_shift_your_thinking">ShiftYourThinking</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="List3things">List 3 things you are grateful for. The more you expand on these items the better.</string>
    <string name="one">1.</string>
    <string name="Iamgrateful">I am grateful for...</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="save">SAVE</string>

    <!--hoong-->
    <string name="editProfile">Edit Profile</string>
    <string name="signOut">Sign Out</string>
    <string name="deleteAccount">DELETE ACCOUNT</string>
    <string name="generalWorry">General Worry</string>
    <string name="socialAnxiety">Social Anxiety</string>
    <string name="panic">Panic</string>
    <string name="phobias">Phobias</string>
    <string name="littleReminder">Little reminder to ease your mind</string>
    <string name="getHelp">Get Help</string>
    <string name="takeABreath">Take A Breath</string>
    <string name="ifInCrisis">If you\'re in crisis:</string>
    <string name="crisis1"> • Take yourself to the closest hospital or walk-in clinic.</string>
    <string name="crisis2"> • Contact a trusted friend or family member immediately.</string>
    <string name="crisis3"> • Get in to see your doctor or counsellor as soon as you can.</string>
    <string name="crisis4"> • Call your local crisis line.</string>
    <string name="ifInCanada">If you\'re in Canada:</string>
    <string name="call911">Call 911</string>
    <string name="SMS">Text message HELLO to the Crisis Text Line to get in touch with a crisis responder:</string>
    <string name="canadaSMSNumber">686868</string>
    <string name="ifInUS">If you\'re in US:</string>
    <string name="canadaPhone">Call the Canada Suicide Prevention Service:</string>
    <string name="canadaPhoneNumber">1-833-456-4566</string>
    <string name="USSMSNumber">741741</string>
    <string name="USPhone">Call the National Suicide Prevention Lifeline:</string>
    <string name="USPhoneNumber">1-800-273-8255</string>
    <string name="date">Date and Time</string>
    <string name="mood">Mood</string>

</resources>
